Importando los estilos desde diferentes hojas css

--- a/css/style.css
+++ b/css/style.css
@@ -1,33 +1,8 @@
-@font-face {
-  font-family: charter;
-  src: url(../fonts/charter-regular.otf);
-  font-style: normal;
-  font-weight: normal;
-}
-@font-face {
-  font-family: charter;
-  src: url(../fonts/charter-italic.otf);
-  font-style: italic;
-  font-weight: 400;
-  /* el font-weight: 400; es igual que poner normal */
-}
-@font-face {
-  font-family: charter;
-  src: url(../fonts/charter-bold.otf);
-  font-style: normal;
-  font-weight: bold;
-}
-@font-face {
-  font-family: charter;
-  src: url(../fonts/charter-bold-italic.otf);
-  font-style: italic;
-  font-weight: 700;
-  /* font-weight: 700; es igual que poner bold */
-}
+@import url("./nemiumC.css");
+@import url("./variantes.css");
 
 :root {
   font-family: "Roboto", sans-serif;
-  font-size: 16px;
   --gray40: #212121;
   --gray30: #212429;
   --gray20: #424242;
@@ -40,321 +15,4 @@ html {
 }
 body {
   margin: 0;
-}
-.header {
-  inline-size: 208px;
-  margin-block-start: 30px;
-  color: var(--gray10);
-  font-size: 14px;
-}
-nav {
-  border-inline-start: 4px solid #c4c4c4;
-  padding-inline-start: 16px;
-}
-nav a {
-  color: var(--gray10);
-  text-decoration: none;
-}
-nav a:hover {
-  color: var(--gray40);
-}
-nav ol {
-  padding-inline-start: 15px;
-}
-nav ol li {
-  margin-block: 16px;
-}
-.variantes {
-  color: var(--gray10);
-  margin-block-end: 104px;
-}
-.variantes p {
-  margin-block: 0;
-}
-.variantes a {
-  display: block;
-  margin-block: 8px;
-  padding: 8px;
-  color: var(--gray10);
-  text-decoration: none;
-}
-.variantes a:first-of-type {
-  margin-block-start: 16px;
-}
-.variantes a:nth-of-type(3) {
-  background-color: var(--gray40);
-  border-radius: 4px;
-  color: white;
-}
-nav details summary {
-  font-weight: bold;
-  cursor: pointer;
-  outline: none;
-}
-nav details summary:first-of-type {
-  list-style-type: none;
-}
-details:last-of-type {
-  margin-block-start: 24px;
-}
-p {
-  margin-block: 16px;
-  text-align: justify;
-}
-section + p {
-  text-align: center;
-}
-p a {
-  color: var(--gray40);
-}
-h1 {
-  color: var(--gray40);
-  font-size: 50px;
-  line-height: 70.31px;
-  font-weight: 400;
-  margin-block: 30px 16px;
-}
-h1 + p {
-  color: var(--gray40);
-}
-hr {
-  border: 1px solid rgba(97, 97, 97, 0.2);
-  margin-block: 40px;
-}
-h2 {
-  color: var(--gray40);
-  font-size: 32px;
-  /* 32px/16px=2rem a diferencia de em, rem toma el tamaño base al 
-  padre mas grande del DOM en este caso al html que tiene por defecto 16pxs*/
-  font-weight: normal;
-  line-height: 37.5px;
-  margin-block: 40px 40px;
-}
-h3 {
-  font-weight: normal;
-  font-size: 24px;
-  line-height: 28.13px;
-}
-.section img {
-  margin-block: 40px 16px;
-  display: block;
-}
-.section h3 {
-  margin-block: 40px 16px;
-  counter-increment: namberLvl3; /* incrementamos el contdor namberLvl3 */
-}
-
-/* La numeracion con css para cada una de nuestras secciones */
-/* reseteamos el contador en cada seccion para que inicie desde 1*/
-.section {
-  counter-reset: namberLvl3;
-}
-.section > h3::before {
-  content: counter(namberLvl3) ". ";
-  /* content: counter(namberLvl3, upper-roman) ".-"; contar en romanos*/
-}
-blockquote + hr {
-  display: none;
-}
-blockquote {
-  font-size: 24px;
-  line-height: 32px;
-  color: var(--gray20);
-  margin-block: 32px 64px;
-  margin-inline: 0;
-  border-inline-start: 4px solid var(--gray40);
-  padding-inline-start: 16px;
-}
-blockquote h3:last-of-type {
-  color: var(--gray10);
-}
-blockquote h3 + h3::before {
-  content: "-";
-}
-pre {
-  background: #e5e5e5;
-  color: var(--gray20);
-  font-family: "Roboto", sans-serif;
-  font-weight: normal;
-  padding-block: 40px;
-  padding-inline: 40px;
-  overflow: auto;
-}
-.conceptos img {
-  margin-block: 16px 40px;
-  inline-size: 100%;
-}
-.conceptos img:last-of-type {
-  margin-block: 16px 40px;
-}
-.no-Num h3 {
-  margin-block: 40px 16px;
-}
-.no-Num ol {
-  margin-block: 16px 40px;
-}
-.no-Num ul li {
-  margin-block: 16px;
-}
-
-.slider-container {
-  display: block;
-  overflow: hidden;
-  scroll-behavior: smooth;
-  white-space: nowrap;
-  font-size: 0;
-}
-.video {
-  border-radius: 8px;
-  display: inline-block;
-  inline-size: 100%;
-  block-size: auto;
-  aspect-ratio: 16/9;
-}
-.slider-bullet-list {
-  text-align: center;
-}
-.slider-bullet {
-  display: inline-block;
-  block-size: 15px;
-  inline-size: 15px;
-  background: var(--gray20);
-  border-radius: 50%;
-}
-.form {
-  margin-block: 40px 40px;
-  margin-inline-start: 3px;
-  position: relative;
-}
-
-form input {
-  font-family: "Roboto", sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  outline: none;
-  box-sizing: border-box;
-  border: 1px solid var(--gray10);
-  border-radius: 90px;
-  padding-block: 12px;
-  padding-inline: 16px;
-  color: var(--gray20);
-  margin-block-end: 16px;
-  block-size: 48px;
-  inline-size: 100%;
-}
-form input::-webkit-input-placeholder {
-  color: var(--gray20);
-}
-form input[type="submit"] {
-  border: none;
-  color: white;
-  background: #000000;
-  cursor: pointer;
-}
-footer {
-  background: var(--gray30);
-  box-sizing: border-box;
-  text-align: center;
-  block-size: 174px;
-  padding-block: 48px;
-}
-footer h2 {
-  color: white;
-  margin-block: 0;
-  margin-block-end: 19px;
-}
-footer a {
-  text-decoration: none;
-}
-footer img {
-  margin-inline: 11px;
-}
-.wrapper {
-  max-inline-size: 966px;
-  margin: auto;
-}
-.main-content {
-  padding-inline: 16px;
-}
-
-/*Móviles en horizontal o tablets en vertical*/
-@media screen and (min-width: 776px) {
-  section + p {
-    text-align: start;
-  }
-  form {
-    margin-inline: 65px;
-  }
-  form input {
-    margin-inline-end: 16px;
-    inline-size: 280px;
-    margin-block-end: 0;
-  }
-  form input[type="submit"] {
-    position: absolute;
-    inline-size: 119px;
-    inset-inline-start: 550px;
-  }
-}
-/*Tablets en horizonal y escritorios normales*/
-@media screen and (min-width: 1024px) {
-  .place {
-    block-size: 250px;
-  }
-  header {
-    margin-block-start: 45px;
-    padding-inline-start: 0;
-    position: absolute;
-    inset-inline-end: -208px;
-  }
-  /* .header {
-  position: sticky;
-    inset-block-start: -35px;
-  } */
-  .header-content {
-    position: relative;
-  }
-  .wrapper {
-    margin-inline-end: 200px;
-  }
-
-  h1 {
-    font-size: 55px;
-    margin-block: 45px 16px;
-  }
-  hr {
-    margin-block: 64px;
-  }
-  h2 {
-    margin-block: 64px 40px;
-  }
-  .conceptos img:last-of-type {
-    margin-block: 16px 164px;
-  }
-  .form {
-    margin-block: 40px 113px;
-  }
-}
-
-/*Escritorios muy anchos*/
-@media screen and (min-width: 1350px) {
-  .place {
-    block-size: 350px;
-  }
-  header {
-    margin-block-start: 64px;
-    padding-inline-start: 0;
-    position: absolute;
-    inset-inline-end: -208px;
-  }
-  .header-content {
-    position: relative;
-  }
-  .wrapper {
-    margin: auto;
-  }
-  h1 {
-    font-size: 60px;
-    margin-block: 120px 16px;
-  }
 }
