--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,11 @@
 @import url("./nemiumC.css");
 @import url("./variantes.css");
+@import url("./slider.css");
 
 :root {
-  font-family: "Roboto", sans-serif;
-  --gray40: #212121;
-  --gray30: #212429;
-  --gray20: #424242;
-  --gray10: #616161;
-  line-height: 24px;
-  color: var(--gray20);
+  --grayPrimary: #212121;
+  --graySecundary: #424242;
+  --fontFamilyC: "Roboto", sans-serif;
 }
 html {
   scroll-behavior: smooth;
