Primera etiqueta "p" de main corregida + responsive

--- a/css/nemiumC.css
+++ b/css/nemiumC.css
@@ -18,8 +18,19 @@ main > h1 {
   font-size: 1.5rem;
   line-height: 1.75rem;
 }
+main > p {
+  display: none;
+}
 main > h1 + p {
+  display: block;
   color: var(--grayPrimary);
+}
+
+main > p > a {
+  color: var(--graySecondary);
+}
+main p span {
+  font-weight: 700;
 }
 p,
 ol,
@@ -57,15 +68,6 @@ h2 {
 h2.h2-64rem {
   font: var(--h2-64remC);
 }
-main > p {
-  display: none;
-}
-main > p > a {
-  color: var(--graySecondary);
-}
-main p span {
-  font-weight: 700;
-}
 
 .form h2 {
   margin-block-start: 2.5rem;
@@ -83,6 +85,9 @@ pre {
     margin-block-start: 1.5rem;
     text-align: center;
   }
+  main > h1 + p {
+    text-align: start;
+  }
 }
 
 @media screen and (min-width: 64rem) {
@@ -92,7 +97,7 @@ pre {
     margin-block-start: 5rem;
   }
   main > h1 + p {
-    margin-block-end: 4rem;
+    margin-block: 1rem 4rem;
   }
   hr {
     display: block;
