Viñetas de u y algunos errores con header

--- a/css/header.css
+++ b/css/header.css
@@ -8,7 +8,7 @@
   text-align: start;
 }
 .header-content a:hover,
-li:hover {
+.header-content li:hover {
   color: var(--grayHeaderSecondaryC);
 }
 .variantes {
