--- a/css/nemiumC.css
+++ b/css/nemiumC.css
@@ -39,6 +39,16 @@ ul {
   text-align: justify;
   margin-block: 1rem;
 }
+ol,
+ul {
+  padding-inline-start: 1.12rem;
+}
+.modeloDeCaja ul li {
+  margin-block: 1rem;
+}
+.modeloDeCaja ul li::marker {
+  font-size: 1.12rem;
+}
 hr {
   border: 1px solid #61616133;
   display: none;
@@ -62,7 +72,8 @@ h2 {
   margin-block: 1rem;
 }
 .conceptos > h2,
-.modeloDeCaja > h2 {
+.modeloDeCaja > h2,
+.slider > h2 {
   margin-block-start: 1.5rem;
 }
 h2.h2-64rem {
@@ -117,7 +128,8 @@ pre {
     font: var(--h2-64remC);
   }
   .conceptos > h2,
-  .modeloDeCaja > h2 {
+  .modeloDeCaja > h2,
+  .slider > h2 {
     margin-block-start: 2.5rem;
   }
   main > p {
@@ -126,5 +138,8 @@ pre {
   }
   pre {
     padding: 2.5rem;
+  }
+  .conceptos img:nth-of-type(2) {
+    margin-block-end: 10.15rem;
   }
 }
