--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
 @import url("./header.css");
 @import url("./before.css");
 @import url("./blockquote.css");
+@import url("./form.css");
 :root {
   --grayPrimary: #212121;
   --graySecondary: #424242;
